--- a/client/src/App.css
+++ b/client/src/App.css
@@ -96,7 +96,7 @@
 
 .analysis-text {
   height: 80px !important;
-  background-color: #3cbc8d !important;
+  background-color: #5f9ea0 !important;
   color: white !important;
 }
 
